[MODORDERS-1252]. Switch to using the Finance Exchange Rate Api (#1111)
* [MODORDERS-1252]. Switch to using the Finance Exchange Rate Api

* Apply review recommendations, add more small refactoring to caching classes